--- a/main.css
+++ b/main.css
@@ -2,7 +2,7 @@
 .subTitle {
     font-size: smaller;
     color: gray;
-    background: lightgreen; 
+    background: lightred; 
     x_test: 2;
 }
 
