--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
 .subTitle {
     font-size: smaller;
     color: gray;
-    background: lightred; 
-    x_test: 2;
+    background: coral; 
+    x_version: 3;
 }
 
 #subTitleOnes {
