--- a/main.css
+++ b/main.css
@@ -2,8 +2,8 @@
 .subTitle {
     font-size: smaller;
     color: gray;
-    background: coral; 
-    x_version: 3;
+    background: blue; 
+    x_version: 4;
 }
 
 #subTitleOnes {
